Fail less in OplogServerStatusSection

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.1, 4.4.16, 5.0.11, 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v6.0, v5.0, v4.4
    • Security 2022-06-27, Security 2022-07-11, Security 2022-07-25
    • 14
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      There are certain cases, e.g. during initial sync when the oplog is not set up, where this server status section will fail. This is bad because it's collected in FTDC. We should try harder not to fail outside of more exceptional circumstances.

            Assignee:
            Gabriel Marks
            Reporter:
            Gabriel Marks
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: