SERVER-67532 Fail oplog server status section less